--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack",
     "dev": "webpack-dev-server",
     "watch": "npm run build -- --watch",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "update-test": "npm run test -- -u",
     "cover": "npm run test -- --coverage"
   },
@@ -38,6 +38,7 @@
     "babel-preset-es2017": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-register": "6.16.0",
+    "cross-env": "^3.2.4",
     "css-loader": "0.25.0",
     "enzyme": "2.0.0",
     "enzyme-to-json": "^1.3.0",
